Create a Firebase project and Setup your app & Install the Firebase Command Line Interface

--- a/web-start/index.html
+++ b/web-start/index.html
@@ -112,5 +112,18 @@
      * TODO(DEVELOPER): Paste the initialization snippet from: Firebase Console > Overview > Add Firebase to your web app. *
      *********************************************************************************************************************** -->
 <script src="scripts/main.js"></script>
+
+<script src="https://www.gstatic.com/firebasejs/3.6.8/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyAFjWIeGAz3I_fyZgMoTz8vD-N_Yj80P10",
+    authDomain: "chat-b1200.firebaseapp.com",
+    databaseURL: "https://chat-b1200.firebaseio.com",
+    storageBucket: "chat-b1200.appspot.com",
+    messagingSenderId: "1029962215999"
+  };
+  firebase.initializeApp(config);
+</script>
 </body>
 </html>
